--- a/package.json
+++ b/package.json
@@ -1,24 +1,55 @@
 {
-  "name": "jl-crm",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "vue": "^3.3.11"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "vue-tsc": "^1.8.25"
-  },
-  "engines": {
-    "node": ">=18.1.0"
-  }
+	"name": "jl-crm",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"preinstall": "npx only-allow pnpm",
+		"dev": "vite",
+		"build": "vue-tsc && vite build",
+		"preview": "vite preview",
+		"prepare": "husky install",
+		"lint:lint-staged": "lint-staged",
+		"lint:eslint": "eslint  --fix --ext .ts,.js,.vue ./src ",
+		"lint:prettier": "prettier --write \"**/*.{js,cjs,ts,json,tsx,css,less,scss,vue,html,md}\""
+	},
+	"dependencies": {
+		"vue": "^3.3.11"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^18.4.3",
+		"@commitlint/config-conventional": "^18.4.3",
+		"@typescript-eslint/eslint-plugin": "^6.17.0",
+		"@typescript-eslint/parser": "^6.17.0",
+		"@vitejs/plugin-vue": "^4.5.2",
+		"eslint": "^8.56.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.2",
+		"eslint-plugin-vue": "^9.19.2",
+		"husky": "^8.0.0",
+		"lint-staged": "^15.2.0",
+		"prettier": "^3.1.1",
+		"typescript": "^5.2.2",
+		"vite": "^5.0.8",
+		"vue-tsc": "^1.8.25"
+	},
+	"lint-staged": {
+		"*.{js,ts}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"*.{cjs,json}": [
+			"prettier --write"
+		],
+		"*.{vue,html}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"*.md": [
+			"prettier --write"
+		]
+	},
+	"engines": {
+		"node": ">=18.1.0"
+	}
 }
