--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint:prettier": "prettier --write \"**/*.{js,cjs,ts,json,tsx,css,less,scss,vue,html,md}\""
 	},
 	"dependencies": {
+		"element-plus": "^2.4.4",
 		"vue": "^3.3.11"
 	},
 	"devDependencies": {
@@ -30,6 +31,8 @@
 		"lint-staged": "^15.2.0",
 		"prettier": "^3.1.1",
 		"typescript": "^5.2.2",
+		"unplugin-auto-import": "^0.17.3",
+		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.0.8",
 		"vue-tsc": "^1.8.25"
 	},
