--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
 	"dependencies": {
 		"element-plus": "^2.4.4",
 		"pinia": "^2.1.7",
-		"vue": "^3.3.11"
+		"vue": "^3.3.11",
+		"vue-router": "4"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^18.4.3",
 		"@commitlint/config-conventional": "^18.4.3",
+		"@types/vue-router": "^2.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
 		"@vitejs/plugin-vue": "^4.5.2",
@@ -29,6 +31,7 @@
 		"eslint-plugin-prettier": "^5.1.2",
 		"eslint-plugin-vue": "^9.19.2",
 		"husky": "^8.0.0",
+		"less": "^4.2.0",
 		"lint-staged": "^15.2.0",
 		"prettier": "^3.1.1",
 		"typescript": "^5.2.2",
