--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
 		"lint:prettier": "prettier --write \"**/*.{js,cjs,ts,json,tsx,css,less,scss,vue,html,md}\""
 	},
 	"dependencies": {
+		"axios": "^1.6.4",
+		"crypto-js": "^4.2.0",
 		"element-plus": "^2.4.4",
+		"js-cookie": "^3.0.5",
+		"normalize.css": "^8.0.1",
 		"pinia": "^2.1.7",
 		"vue": "^3.3.11",
 		"vue-router": "4"
@@ -31,9 +35,9 @@
 		"eslint-plugin-prettier": "^5.1.2",
 		"eslint-plugin-vue": "^9.19.2",
 		"husky": "^8.0.0",
-		"less": "^4.2.0",
 		"lint-staged": "^15.2.0",
 		"prettier": "^3.1.1",
+		"sass": "^1.69.7",
 		"typescript": "^5.2.2",
 		"unplugin-auto-import": "^0.17.3",
 		"unplugin-vue-components": "^0.26.0",
