--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
 		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"skipLibCheck": true,
 		"types": ["element-plus/global"],
+		"baseUrl": ".",
+		"paths": {
+			// 快捷路径导入
+			"@/*": ["src/*"]
+		},
 
 		/* Bundler mode */
 		"moduleResolution": "bundler",
