--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"preinstall": "npx only-allow pnpm",
 		"dev": "vite",
-		"build": "vue-tsc && vite build",
+		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "husky install",
 		"lint:lint-staged": "lint-staged",
@@ -21,6 +21,7 @@
 		"normalize.css": "^8.0.1",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.1.7",
+		"terser": "^5.26.0",
 		"vue": "^3.3.11",
 		"vue-router": "4",
 		"vue3-image-preview": "^0.2.7"
@@ -39,6 +40,7 @@
 		"husky": "^8.0.0",
 		"lint-staged": "^15.2.0",
 		"prettier": "^3.1.1",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"sass": "^1.69.7",
 		"typescript": "^5.2.2",
 		"unplugin-auto-import": "^0.17.3",
